crates/brasa_parser/tests/snapshots/precedence__prec_coalesce_right_assoc_chain.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"x ?? y ?? z\")"
---
Coalesce
  Ident(x)
  Coalesce
    Ident(y)
    Ident(z)
