crates/brasa_parser/tests/snapshots/precedence__prec_coalesce_then_pipe.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"a ?? b |> f(c)\")"
---
Pipe
  Coalesce
    Ident(a)
    Ident(b)
  Call
    Ident(f)
    Ident(c)
