crates/brasa_parser/tests/snapshots/precedence__prec_eq_and_lt.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"a == b && c < d\")"
---
Binary(&&)
  Binary(==)
    Ident(a)
    Ident(b)
  Binary(<)
    Ident(c)
    Ident(d)
