crates/brasa_parser/tests/snapshots/precedence__prec_index_chain.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"items[0].name\")"
---
Field(name)
  Index
    Ident(items)
    Int(0)
