crates/brasa_parser/tests/snapshots/precedence__prec_not_dot_pred.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"!x.valid?\")"
---
Unary(!)
  Field(valid?)
    Ident(x)
