crates/brasa_parser/tests/snapshots/precedence__prec_pow_right_assoc.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"2 ** 3 ** 2\")"
---
Binary(**)
  Int(2)
  Binary(**)
    Int(3)
    Int(2)
