crates/brasa_parser/tests/snapshots/precedence__prec_range.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"0..10\")"
---
Range(inclusive=false)
  Int(0)
  Int(10)
