crates/brasa_parser/tests/snapshots/precedence__prec_sub_left_assoc.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"a - b - c\")"
---
Binary(-)
  Binary(-)
    Ident(a)
    Ident(b)
  Ident(c)
