crates/brasa_parser/tests/snapshots/precedence__prec_unary_binds_tighter_than_pow.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"-x ** 2\")"
---
Binary(**)
  Unary(-)
    Ident(x)
  Int(2)
