crates/brasa_parser/tests/snapshots/precedence__throws_never.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"def pure(x: int): int throws never\\n  x\\nend\")"
---
FuncDef pure(x) throws never
  Ident(x)
