crates/brasa_parser/tests/snapshots/precedence__throws_qualified_names.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"def read(p: string): string throws fs.NotFound | utils.ParseError\\n  p\\nend\")"
---
FuncDef read(p) throws fs.NotFound|utils.ParseError
  Ident(p)
